<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tomtom</string>
    <string name="title_activity_login">Login</string>
    <string name="facebook_app_id">193892514533794</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">175cb59f2395d33f7df8408da82449b3</string>
    <string name="fb_login_protocol_scheme">fb193892514533794</string>

    <string name="user_name">Full Name</string>
    <string name="gender_selection">Choose your gender</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="location_title">Choose your location</string>
    <string name="dhaka">Dhaka</string>
    <string name="chittagong">Chittagong</string>
    <string name="save">Save</string>
    <string name="mobile_number">Mobile</string>

    <string name="history">History</string>
    <string name="freer_ride">Free Rides</string>
    <string name="promotions">Promotions</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="bangla">বাংলা</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="first_girl_then_boy_biker">First girl, then boy biker</string>
    <string name="only_boy_biker">Only boy biker</string>
    <string name="only_girl_biker">Only girl biker</string>
    <string name="call_for_support">Call for support</string>
    <string name="need_any_support">Need any Support?</string>
    <string name="loading">Loading...</string>
    <string name="find_your_ride">FIND YOUR RIDE</string>
    <string name="order_a_ride">ORDER A RIDE</string>
    <string name="invite_your_friend">Invite your friend</string>
    <string name="get_a_nice_discount">GET A NICE DISCOUNT</string>
    <string name="apply_here">APPLY HERE</string>
    <string name="got_a_promo_code">Got a promo code?</string>
    <string name="here_will_be_the_ad">HERE WILL BE THE AD</string>
    <string name="login_with">Login with</string>
    <string name="phone_number">PHONE NUMBER</string>

</resources>
