<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/radioGroup"
     >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_girl_then_boy_biker"
            android:id="@+id/radioFemaleOne"
            android:checked="true"
            android:includeFontPadding="true"
            android:paddingLeft="8dp"
            android:layout_margin="8dp"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_boy_biker"
            android:id="@+id/radioFemaleTwo"
            android:layout_margin="8dp"
            android:includeFontPadding="true"
            android:paddingLeft="8dp"
            android:checked="false"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_girl_biker"
            android:id="@+id/radioFemaleThree"
            android:layout_margin="8dp"
            android:includeFontPadding="true"
            android:paddingLeft="8dp"
            android:checked="false"
            android:textSize="18sp" />

    </RadioGroup>

</LinearLayout>