<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/cover_image">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/layoutTop"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_name_wraper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_name_wraper"
            android:padding="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#282780"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/gender_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gender_selection"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/female"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                </RadioGroup>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_age_wraper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edit_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>





        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_email_wraper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/location_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_email_wraper"
            android:padding="5dp"
            android:text="@string/location_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <RadioGroup
            android:id="@+id/radioLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_title"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioDhaka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dhaka"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <RadioButton
                android:id="@+id/radioCtg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/chittagong"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
        </RadioGroup>

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioLocation"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="Update Profile"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_above="@id/layoutBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-46dp"
        android:src="@drawable/profile_picture"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/select_image"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_above="@id/layoutBottom"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignRight="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />
</RelativeLayout>