<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lab.multiplexer.tomtom.Activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                >
                <RelativeLayout
                    android:id="@+id/btnOrderRide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/order_button_shape"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_a_ride"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        android:padding="16dp"
                        android:layout_centerVertical="true"
                        />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="16dp"
                        android:src="@drawable/bike"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/free_button_shape"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/invite_your_friend"
                            android:layout_marginLeft="16dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get_a_nice_discount"
                            android:layout_marginLeft="16dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="16dp"
                        android:src="@drawable/giftbox"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/free_button_shape"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/got_a_promo_code"
                            android:layout_marginLeft="16dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/apply_here"
                            android:layout_marginLeft="16dp"
                            android:textStyle="bold"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorPrimary"
                            />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="16dp"
                        android:src="@drawable/coupon"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/here_will_be_the_ad"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>

</LinearLayout>
